Updated all project files

--- a/dashboard.html
+++ b/dashboard.html
@@ -3,171 +3,203 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Producer Dashboard - MessMate</title>
+  <title>Student Dashboard - MessMate</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://unpkg.com/html5-qrcode@2.3.8/html5-qrcode.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
   <style>
     @keyframes slideIn {
       from { opacity: 0; transform: translateY(20px); }
       to { opacity: 1; transform: translateY(0); }
     }
-    .counter-card { 
+    .meal-card { 
       animation: slideIn 0.4s ease-out; 
       transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
     }
-    .counter-card:hover {
-      transform: translateY(-4px);
+    .meal-card:hover {
+      transform: translateY(-8px);
       box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.3), 0 10px 10px -5px rgba(0, 0, 0, 0.2);
     }
-    #reader { width: 100%; max-width: 400px; margin: 0 auto; }
-    #scanner-modal { z-index: 1000; }
-    .scan-result { animation: slideIn 0.5s ease-out; }
+    .rating-update { 
+      animation: pulse 0.6s ease-in-out; 
+    }
+    @keyframes pulse {
+      0% { transform: scale(1); box-shadow: 0 0 0 0 rgba(59, 130, 246, 0.7); }
+      70% { transform: scale(1.02); box-shadow: 0 0 0 10px rgba(59, 130, 246, 0); }
+      100% { transform: scale(1); box-shadow: 0 0 0 0 rgba(59, 130, 246, 0); }
+    }
+    .shimmer {
+      background: linear-gradient(90deg, #1f2937 25%, #374151 50%, #1f2937 75%);
+      background-size: 200% 100%;
+      animation: shimmer 2s infinite;
+    }
+    @keyframes shimmer {
+      0% { background-position: 200% 0; }
+      100% { background-position: -200% 0; }
+    }
+    .image-container {
+      position: relative;
+      overflow: hidden;
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+    }
+    .meal-image {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      transition: transform 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .meal-card:hover .meal-image {
+      transform: scale(1.08);
+    }
     .gradient-text {
       background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       background-clip: text;
     }
+    .chart-container {
+      background: linear-gradient(135deg, rgba(31, 41, 55, 0.8) 0%, rgba(55, 65, 81, 0.8) 100%);
+      border-radius: 12px;
+      padding: 20px;
+      border: 1px solid rgba(148, 163, 184, 0.2);
+      backdrop-filter: blur(10px);
+    }
     .modal-overlay {
       backdrop-filter: blur(8px);
     }
   </style>
 </head>
-<body class="min-h-screen bg-gradient-to-br from-gray-900 via-slate-900 to-gray-900 text-white p-6 overflow-x-hidden">
-  <div class="max-w-6xl mx-auto px-4 md:px-6">
-    <div class="flex items-center justify-between mb-8">
+<body class="min-h-screen bg-gradient-to-br from-slate-900 via-indigo-900 to-slate-900 text-white overflow-x-hidden">
+  <div class="max-w-7xl mx-auto px-4 md:px-8 py-6">
+    <!-- Header -->
+    <div class="flex justify-between items-center mb-12">
       <div>
-        <h1 class="text-4xl font-bold gradient-text">Producer Dashboard</h1>
-        <p id="producer-welcome" class="text-base text-slate-300 mt-2 font-medium"></p>
+        <h1 class="text-5xl font-bold gradient-text">MessMate</h1>
+        <p id="welcome" class="text-lg text-indigo-200 mt-2 font-medium"></p>
       </div>
       <div class="flex items-center gap-4">
-        <button id="scanBtn" class="text-2xl p-4 bg-slate-800/50 hover:bg-slate-700/50 rounded-full transition-all duration-300 hover:scale-110 shadow-lg" title="Scan QR">
-          <i class="fas fa-qrcode"></i>
+        <button id="profileBtn" class="text-2xl p-3 bg-slate-800/50 hover:bg-slate-700/50 rounded-full transition-all duration-300 hover:scale-110" title="Profile">
+          <i class="fas fa-user"></i>
         </button>
-        <button id="logout" class="bg-gradient-to-r from-red-500 to-red-600 hover:from-red-600 hover:to-red-700 px-6 py-3 rounded-xl font-semibold transition-all duration-300 hover:scale-105 shadow-lg hover:shadow-xl">Logout</button>
+        <button id="logout" class="bg-gradient-to-r from-red-500 to-red-600 hover:from-red-600 hover:to-red-700 px-8 py-3 rounded-xl font-semibold transition-all duration-300 hover:scale-105 shadow-lg hover:shadow-xl">Logout</button>
       </div>
     </div>
 
-    <!-- Stats Section -->
-    <section class="mb-12">
-      <div class="flex flex-col sm:flex-row justify-between items-start sm:items-center mb-6 gap-4">
-        <h2 class="text-3xl font-bold text-indigo-200 flex items-center gap-3">
-          <i class="fas fa-chart-pie"></i> Order Statistics
-        </h2>
-        <select id="periodSelect" class="bg-slate-700/80 text-white px-6 py-3 rounded-xl border border-slate-600/50 focus:outline-none focus:border-indigo-500 focus:ring-2 focus:ring-indigo-500/50 transition-all duration-200">
-          <option value="day">Today</option>
-          <option value="week">This Week</option>
-          <option value="month">This Month</option>
-          <option value="year">This Year</option>
-        </select>
+    <!-- Meals Section -->
+    <section class="mb-16">
+      <h2 class="text-3xl font-bold mb-8 text-indigo-200 flex items-center gap-3">
+        <i class="fas fa-utensils"></i> Available Meals
+      </h2>
+      <div id="meals" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8"></div>
+    </section>
+
+    <!-- Orders Section -->
+    <section class="mb-16">
+      <h2 class="text-3xl font-bold mb-8 text-indigo-200 flex items-center gap-3">
+        <i class="fas fa-shopping-bag"></i> Your Orders
+      </h2>
+      <div id="orders" class="bg-slate-800/30 backdrop-blur-sm p-8 rounded-2xl border border-slate-700/30 shadow-2xl"></div>
+
+      <!-- Today's QR Section -->
+      <div id="qrSection" class="mt-8 hidden bg-slate-800/30 backdrop-blur-sm p-8 rounded-2xl border border-slate-700/30 text-center shadow-2xl">
+        <h3 class="text-2xl font-bold mb-6 text-indigo-200 flex items-center justify-center gap-3 mx-auto">
+          <i class="fas fa-qrcode"></i> Today's QR Code
+        </h3>
+        <img id="dashboardQR" class="mx-auto mb-6 border-2 border-indigo-500 rounded-xl shadow-lg" alt="QR Code" style="width: 220px; height: 220px;">
+        <p class="text-lg text-slate-300 mb-4">Scan to confirm today's meals</p>
+        <div id="qrMealsList" class="mt-6 text-left bg-slate-700/40 p-4 rounded-xl border border-slate-600/50 hidden">
+          <h4 class="font-semibold mb-3 text-emerald-300 flex items-center gap-2">
+            <i class="fas fa-check-circle"></i> Contains:
+          </h4>
+          <ul id="qrMealsItems" class="space-y-2 text-sm"></ul>
+        </div>
+        <button id="refreshQR" class="mt-6 bg-gradient-to-r from-indigo-500 to-purple-600 hover:from-indigo-600 hover:to-purple-700 px-6 py-3 rounded-xl text-white font-semibold transition-all duration-300 hover:scale-105 shadow-lg">
+          <i class="fas fa-sync-alt mr-2"></i> Refresh QR
+        </button>
+      </div>
+    </section>
+  </div>
+
+  <!-- Profile Modal -->
+  <div id="profileModal" class="fixed inset-0 bg-black/60 modal-overlay flex items-center justify-center z-50 hidden">
+    <div class="bg-slate-800/95 backdrop-blur-sm rounded-2xl p-8 max-w-6xl max-h-[95vh] overflow-y-auto border border-slate-700/50 shadow-2xl w-full mx-4 md:mx-0">
+      <div class="flex justify-between items-center mb-8">
+        <h3 class="text-3xl font-bold gradient-text flex items-center gap-3">
+          <i class="fas fa-user-circle"></i> Profile & Order History
+        </h3>
+        <button id="closeProfile" class="text-3xl hover:text-red-400 transition-colors duration-200">×</button>
       </div>
       
-      <!-- Main Counters -->
-      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 mb-8">
-        <div class="counter-card bg-gradient-to-br from-blue-500/80 to-blue-600/80 backdrop-blur-sm p-6 rounded-2xl text-center border border-blue-700/50 shadow-xl hover:shadow-2xl transition-all duration-300">
-          <h3 class="text-lg font-semibold text-white/90 mb-2 flex items-center justify-center gap-2">
-            <i class="fas fa-boxes text-blue-200"></i> Total Orders
-          </h3>
-          <p class="text-3xl font-bold text-white" id="totalOrders">0</p>
+      <!-- Score Section -->
+      <div id="scoreSection" class="bg-gradient-to-r from-yellow-500/20 to-orange-500/20 border border-yellow-500/30 p-6 rounded-xl mb-8">
+        <p class="text-lg text-yellow-200 flex flex-wrap items-center gap-4">
+          <span><i class="fas fa-exclamation-triangle mr-2"></i> Unpaid Foods Today: <span id="unpaidCount" class="font-bold text-white">0</span></span>
+          <span>|</span>
+          <span><i class="fas fa-star mr-2"></i> Score: <span id="score" class="font-bold">0</span></span>
+        </p>
+      </div>
+
+      <!-- Spending Graph Section -->
+      <div class="mb-12">
+        <div class="flex flex-col sm:flex-row justify-between items-start sm:items-center mb-6 gap-4">
+          <h4 class="text-2xl font-bold text-indigo-200 flex items-center gap-3">
+            <i class="fas fa-chart-line"></i> Spending Overview
+          </h4>
+          <select id="periodSelect" class="bg-slate-700/80 text-white px-6 py-3 rounded-xl border border-slate-600/50 focus:outline-none focus:border-indigo-500 focus:ring-2 focus:ring-indigo-500/50 transition-all duration-200">
+            <option value="day">Today</option>
+            <option value="week">This Week</option>
+            <option value="month">This Month</option>
+            <option value="year">This Year</option>
+          </select>
         </div>
-        <div class="counter-card bg-gradient-to-br from-emerald-500/80 to-emerald-600/80 backdrop-blur-sm p-6 rounded-2xl text-center border border-emerald-700/50 shadow-xl hover:shadow-2xl transition-all duration-300">
-          <h3 class="text-lg font-semibold text-white/90 mb-2 flex items-center justify-center gap-2">
-            <i class="fas fa-check-circle text-emerald-200"></i> Paid Orders
-          </h3>
-          <p class="text-3xl font-bold text-white" id="paidOrders">0</p>
+        <div class="total-spent bg-slate-700/40 p-6 rounded-xl border border-slate-600/50 mb-6 text-center">
+          <p class="text-2xl font-bold text-emerald-400" id="totalSpent">₹0</p>
+          <p class="text-base text-slate-300">Total spent in selected period</p>
         </div>
-        <div class="counter-card bg-gradient-to-br from-red-500/80 to-red-600/80 backdrop-blur-sm p-6 rounded-2xl text-center border border-red-700/50 shadow-xl hover:shadow-2xl transition-all duration-300">
-          <h3 class="text-lg font-semibold text-white/90 mb-2 flex items-center justify-center gap-2">
-            <i class="fas fa-exclamation-triangle text-red-200"></i> Unpaid Orders
-          </h3>
-          <p class="text-3xl font-bold text-white" id="unpaidOrders">0</p>
-        </div>
-        <div class="counter-card bg-gradient-to-br from-purple-500/80 to-purple-600/80 backdrop-blur-sm p-6 rounded-2xl text-center border border-purple-700/50 shadow-xl hover:shadow-2xl transition-all duration-300">
-          <h3 class="text-lg font-semibold text-white/90 mb-2 flex items-center justify-center gap-2" id="scannedLabel">
-            <i class="fas fa-qrcode text-purple-200"></i> Today's Verified
-          </h3>
-          <p class="text-3xl font-bold text-white" id="scannedOrders">0</p>
+        <div class="chart-container">
+          <canvas id="spendingChart" height="250"></canvas>
         </div>
       </div>
 
-      <!-- Food Types Counters -->
-      <div class="bg-slate-800/40 backdrop-blur-sm p-8 rounded-2xl border border-slate-700/50 shadow-xl">
-        <h3 class="text-2xl font-bold mb-6 text-indigo-200 flex items-center gap-3">
-          <i class="fas fa-utensils"></i> Food Types Ordered
-        </h3>
-        <div id="mealTypes" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"></div>
-      </div>
-    </section>
-
-    <!-- Scanned Orders Verification Section -->
-    <section class="mb-12">
-      <h2 class="text-3xl font-bold mb-6 text-indigo-200 flex items-center gap-3">
-        <i class="fas fa-clipboard-list"></i> Pending Verifications
-      </h2>
-      <div id="pendingVerifications" class="bg-slate-800/40 backdrop-blur-sm p-8 rounded-2xl border border-slate-700/50 space-y-6 min-h-[200px] shadow-xl">
-        <div class="text-slate-400 text-center py-12 flex items-center justify-center gap-3">
-          <i class="fas fa-qrcode text-3xl opacity-50"></i>
-          <div>
-            <p class="text-lg">Scan a QR to start verification.</p>
-            <p class="text-sm mt-1">Ready to process student orders</p>
-          </div>
+      <!-- Food Items Graph Section -->
+      <div class="mb-12">
+        <h4 class="text-2xl font-bold text-indigo-200 mb-6 flex items-center gap-3">
+          <i class="fas fa-chart-bar"></i> Food Items Ordered
+        </h4>
+        <div class="chart-container">
+          <canvas id="foodChart" height="250"></canvas>
         </div>
       </div>
-    </section>
 
-    <!-- Live Updates Section -->
-    <section class="mb-12">
-      <h2 class="text-3xl font-bold mb-6 text-indigo-200 flex items-center gap-3">
-        <i class="fas fa-star"></i> Live Rating Updates
-      </h2>
-      <div id="live" class="bg-slate-800/40 backdrop-blur-sm p-8 rounded-2xl border border-slate-700/50 min-h-[150px] shadow-xl overflow-y-auto max-h-96"></div>
-    </section>
-  </div>
-
-  <!-- Scanner Modal -->
-  <div id="scannerModal" class="fixed inset-0 bg-black/80 modal-overlay flex items-center justify-center z-50 hidden">
-    <div class="bg-slate-800/95 backdrop-blur-sm rounded-2xl p-8 max-w-lg w-full mx-4 border border-slate-700/50 shadow-2xl">
-      <div class="flex justify-between items-center mb-6">
-        <h3 class="text-2xl font-bold gradient-text flex items-center gap-3">
-          <i class="fas fa-qrcode"></i> QR Scanner
-        </h3>
-        <button id="closeScanner" class="text-3xl hover:text-red-400 transition-colors duration-200">×</button>
-      </div>
-      <div id="reader" class="mb-4"></div>
-      <p class="text-base text-slate-300 text-center flex items-center justify-center gap-2">
-        <i class="fas fa-mobile-alt mr-2"></i> Scan student's QR code
-      </p>
+      <!-- Order History -->
+      <h4 class="text-2xl font-bold text-indigo-200 mb-6 flex items-center gap-3">
+        <i class="fas fa-history"></i> Previous Orders
+      </h4>
+      <div id="profileOrders" class="space-y-4 max-h-96 overflow-y-auto"></div>
     </div>
   </div>
 
-  <!-- Verification Modal -->
-  <div id="verifyModal" class="fixed inset-0 bg-black/60 modal-overlay flex items-center justify-center z-50 hidden">
-    <div class="bg-slate-800/95 backdrop-blur-sm rounded-2xl p-8 max-w-2xl w-full mx-4 border border-slate-700/50 shadow-2xl max-h-[90vh] overflow-y-auto">
-      <div class="flex justify-between items-center mb-6">
-        <h3 class="text-2xl font-bold gradient-text flex items-center gap-3">
-          <i class="fas fa-clipboard-check"></i> Verify Order
-        </h3>
-        <button id="closeVerify" class="text-3xl hover:text-red-400 transition-colors duration-200">×</button>
+  <!-- QR Modal -->
+  <div id="qrModal" class="fixed inset-0 bg-black/60 modal-overlay flex items-center justify-center z-50 hidden">
+    <div class="bg-slate-800/95 backdrop-blur-sm rounded-2xl p-8 max-w-lg w-full mx-4 border border-slate-700/50 shadow-2xl text-center">
+      <h3 class="text-3xl font-bold gradient-text mb-8 flex items-center justify-center gap-3 mx-auto">
+        <i class="fas fa-check-circle text-emerald-400"></i> Payment Successful!
+      </h3>
+      <p class="text-lg text-slate-300 mb-6">Scan QR for Today's Meals</p>
+      <img id="qrCanvas" class="mx-auto mb-6 border-2 border-emerald-500 rounded-xl shadow-lg" alt="QR Code" style="width: 220px; height: 220px;">
+      <div id="modalMealsList" class="mt-6 text-left bg-slate-700/40 p-4 rounded-xl border border-slate-600/50 hidden">
+        <h4 class="font-semibold mb-3 text-emerald-300 flex items-center gap-2">
+          <i class="fas fa-check-circle"></i> Contains:
+        </h4>
+        <ul id="modalMealsItems" class="space-y-2 text-sm"></ul>
       </div>
-      <div id="verifyContent" class="space-y-6">
-        <!-- Dynamic content here -->
-      </div>
-      <div class="flex justify-end gap-4 mt-8 pt-6 border-t border-slate-700/50">
-        <button id="cancelVerify" class="px-6 py-3 bg-gray-600/80 hover:bg-gray-700/80 rounded-xl transition-all duration-300 hover:scale-105 shadow-lg"> 
-          <i class="fas fa-times mr-2"></i> Cancel
-        </button>
-        <button id="doneVerify" class="px-6 py-3 bg-emerald-600/80 hover:bg-emerald-700/80 rounded-xl transition-all duration-300 hover:scale-105 shadow-lg">
-          <i class="fas fa-check mr-2"></i> Done & Verify
-        </button>
-      </div>
+      <button id="closeQR" class="bg-gradient-to-r from-emerald-500 to-teal-600 hover:from-emerald-600 hover:to-teal-700 px-8 py-3 rounded-xl font-semibold transition-all duration-300 hover:scale-105 shadow-lg">
+        <i class="fas fa-times mr-2"></i> Close
+      </button>
     </div>
   </div>
 
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
-
-
-
-
