--- a/dashboard1.html
+++ b/dashboard1.html
@@ -458,6 +458,6 @@
     </div>
   </div>
 
-  <script src="producer-dashboard-merged.js"></script>
+  <script src="script1.js"></script>
 </body>
 </html>
