Replace producer-dashboard-merged.js with script1.js

--- a/dashboard1.html
+++ b/dashboard1.html
@@ -394,6 +394,6 @@
     </section>
   </div>
 
-  <script src="producer-dashboard-merged.js"></script>
+  <script src="script1.js"></script>
 </body>
 </html>
